# cr-multi-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  config.py  development-process.md  main.py  project-workflow.md  pyproject.toml  technology-stack.md
dashboard/: streamlit_app.py
scripts/: benchmark.py
src/agents/: aggregator.py  base.py  logic_checker.py  planner.py  readability_checker.py  security_checker.py  style_checker.py
src/api/: middleware.py  routes.py  schemas.py
src/cache/: redis_client.py
src/degradation/: __init__.py  fallback.py  handler.py  monitor.py
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/integrations/: github.py  webhook.py
src/models/: __init__.py  finding.py  review_input.py  review_result.py
src/tools/: mcp_client.py
src/utils/: logger.py  metrics.py
tests/: test_aggregator.py  test_api.py  test_cache.py  test_degradation.py  test_models.py
tests/test_agents/: test_logic_checker.py  test_planner.py  test_readability_checker.py  test_security_checker.py  test_style_checker.py
tests/test_graph/: __init__.py  test_edges.py  test_nodes.py  test_workflow.py
